--- a/xp-icon.html
+++ b/xp-icon.html
@@ -7,11 +7,11 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This component is used to display an icon.
+This element is used to display an icon.
 It can be used in conjunction with xp-iconset.
 
-@component xp-icon
-@description This component is used to display an icon.
+@element xp-icon
+@description This element is used to display an icon.
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
@@ -53,7 +53,7 @@ It can be used in conjunction with xp-iconset.
     </template>
 
     <script>
-        XPComponent({
+        XPElement({
 
             /**
              * Refreshes the element.
