--- a/xp-icon.html
+++ b/xp-icon.html
@@ -12,6 +12,7 @@ It can be used in conjunction with xp-iconset.
 
 @element xp-icon
 @description This element is used to display an icon.
+@homepage http://www.expandjs.com/elements/xp-icon
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
