--- a/xp-icon.html
+++ b/xp-icon.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2015 The expand.js authors. All rights reserved.
+Copyright (c) 2015 The ExpandJS authors. All rights reserved.
 This code may only be used under the BSD style license found at https://expandjs.github.io/LICENSE.txt
 The complete set of authors may be found at https://expandjs.github.io/AUTHORS.txt
 The complete set of contributors may be found at https://expandjs.github.io/CONTRIBUTORS.txt
@@ -11,7 +11,7 @@ This element is used to display an icon.
 It can be used in conjunction with xp-iconset.
 
 @element xp-icon
-@description This element is used to display an icon.
+@description A custom element able to display an icon
 @homepage http://www.expandjs.com/elements/xp-icon
 
 @dependency polymer Polymer/polymer#^0.5
