--- a/xp-icon.html
+++ b/xp-icon.html
@@ -136,7 +136,7 @@ It can be used in conjunction with xp-iconset.
                 /**
                  * The icon's src.
                  *
-                 * @attribute name
+                 * @attribute src
                  * @type string
                  * @default ""
                  */
