--- a/xp-icon.html
+++ b/xp-icon.html
@@ -24,7 +24,7 @@ It can be used in conjunction with xp-iconset.
 <link rel="import" href="../expandjs/expandjs.html">
 <link rel="import" href="../xp-iconset/xp-iconset.html">
 
-<polymer-element name="xp-icon" constructor="XPIconElement" attributes="context empty name raster src">
+<polymer-element name="xp-icon" attributes="context empty name raster src">
 
     <template>
         <style>
