--- a/xp-icon.html
+++ b/xp-icon.html
@@ -13,7 +13,7 @@ It can be used in conjunction with xp-iconset.
 @element xp-icon
 @description A custom element able to display an icon
 @group contents
-@homepage http://www.expandjs.com/elements/xp-icon
+@homepage http://expandjs.com/elements/xp-icon
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
