--- a/xp-icon.html
+++ b/xp-icon.html
@@ -12,6 +12,7 @@ It can be used in conjunction with xp-iconset.
 
 @element xp-icon
 @description A custom element able to display an icon
+@keywords web app, html5, expandjs
 @group contents
 @homepage http://expandjs.com/elements/xp-icon
 
