--- a/xp-icon.html
+++ b/xp-icon.html
@@ -58,6 +58,9 @@ It can be used in conjunction with xp-iconset.
     <script>
         XPElement({
 
+            // ELEMENT
+            is: 'xp-icon',
+
             /**
              * Refreshes the element.
              *
