--- a/xp-icon.html
+++ b/xp-icon.html
@@ -16,9 +16,9 @@ It can be used in conjunction with xp-iconset.
 @group contents
 @homepage http://expandjs.com/elements/xp-icon
 
-@dependency polymer Polymer/polymer
-@dependency expandjs ExpandJS/expandjs
-@dependency xp-iconset ExpandJS/xp-iconset
+@dependency polymer Polymer/polymer#^1.0.4
+@dependency expandjs ExpandJS/expandjs#0.9.1
+@dependency xp-iconset ExpandJS/xp-iconset#0.9.1
 -->
 
 <link rel="import" href="../polymer/polymer.html">
