--- a/xp-icon.html
+++ b/xp-icon.html
@@ -18,8 +18,8 @@ It can be used in conjunction with xp-iconset.
 @homepage http://expandjs.com/elements/xp-icon
 
 @dependency polymer Polymer/polymer#^1.0.0
-@dependency expandjs ExpandJS/expandjs#0.9.4
-@dependency xp-iconset ExpandJS/xp-iconset#0.9.4
+@dependency expandjs ExpandJS/expandjs#0.9.5
+@dependency xp-iconset ExpandJS/xp-iconset#0.9.5
 -->
 
 <link rel="import" href="../polymer/polymer.html">
@@ -77,7 +77,7 @@ It can be used in conjunction with xp-iconset.
                 // Vars
                 var self        = this,
                     icon        = self.iconSet && self.iconName ? self.iconSet.findIcon(self.iconName) : null,
-                    iconElement = icon ? XP.createElementNS('http://www.w3.org/2000/svg', 'svg', {children: [icon]}) : (self.src ? XP.createElement('div') : null),
+                    iconElement = self.src ? XP.createElement('div') : icon && XP.createElementNS('http://www.w3.org/2000/svg', 'svg', {children: [icon]}),
                     iconTag     = iconElement ? XP.getTag(XP.addAttribute(iconElement, 'icon')) : null;
 
                 // Setting
