- Added mat-progress - Added mat-spinner - Improved xp-pressed-behavior - Major documentation improvements - Minor bug fixes - Moved multi selection from xp-selected-behavior to xp-multi-select-behavior

--- a/xp-icon.html
+++ b/xp-icon.html
@@ -16,6 +16,7 @@ It can be used in conjunction with xp-iconset.
 @keywords web app, html5, expandjs, web-components
 @group contents
 @homepage http://expandjs.com/elements/xp-icon
+@repository https://github.com/ExpandJS/xp-icon
 
 @dependency polymer Polymer/polymer#^1.0.0
 @dependency expandjs ExpandJS/expandjs#0.9.5
